# SignalBlocks

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  FindSCTP.cmake  Makefile.am  SignalBlocks.sln  SignalBlocks.vcxproj  SignalBlocks.vcxproj.filters  azure-pipelines.yml  build-linux.sh  build-macosx.sh  cmake.sh  compiler.cmake  configure.ac  doxygen.cmake  index.html  params.json  readme.md
blocks/: CMakeLists.txt  Makefile.am
blocks/basicop/: Buffer.cc  Buffer.cpp  Buffer.h  Buffer.hh  Buffer.tcc  Demultiplex.cc  Demultiplex.cpp  Demultiplex.h  Demultiplex.hh  Duplicator.h  Multiplex.cc  Multiplex.cpp  Multiplex.h  Multiplex.hh  Serialize.h  Serialize.hh  Splitter.h  TransparentForwarder.h  Transpose.h
blocks/converters/: BasicTypeConverter.cc  BasicTypeConverter.cpp  BasicTypeConverter.h  BasicTypeConverter.hh  CharOrdinalConverter.cpp  CharOrdinalConverter.h  OrdinalConverter.cpp  OrdinalConverter.h  ToMatrixConverter.h
blocks/filters/: Delay.h  DownSample.h  DownSample.hh
blocks/math/: Arccosh.h  Arccosh.hh  Arcsinh.h  Arcsinh.hh  Arctanh.h  Arctanh.hh  Average.h  BinaryOperator.cc  BinaryOperator.cpp  BinaryOperator.h  BinaryOperator.hh  ConstPow.h  ConstPow.hh  Cos.h  Cos.hh  Difference.h  Difference.hh  Expm1.h  Expm1.hh  Gain.h  Gain.hh  Log1p.h  Log1p.hh  NOperator.cc  NOperator.cpp  NOperator.h  NOperator.hh  Product.h  Product.hh  RunningAverage.h  Sin.h  Sin.hh  Sum.h  Sum.hh  Tan.h  Tan.hh  UnaryOperator.h
blocks/python/: MyUdpClient.py  MyUdpServer.py  PythonNOperator.cc  PythonNOperator.cpp  PythonNOperator.h  PythonNOperator.hh  animation_blit_qt4.py  radar_chart.py  remote_animation_blit_qt4.py  scatter_piecharts.py
blocks/sinks/: ArchiverSink.h  FileSinkCreator.h  FileSinkCreator.hh  JsonDataExtractableSink.h  OstreamSink.cc  OstreamSink.cpp  OstreamSink.h  OstreamSink.hh  PlotSink.cc  PlotSink.cpp  PlotSink.h  PlotSink.hh  SocketSink.cc  SocketSink.cpp  SocketSink.h  SocketSink.hh  SocketSinkCreator.h  SocketSinkCreator.hh  StdoutSink.cc  StdoutSink.cpp  StdoutSink.h  StdoutSink.hh  Terminator.h  Terminator.hh
blocks/sources/: AudioSource.h  ComplexStreamSource.cc  ComplexStreamSource.cpp  ComplexStreamSource.h  ComplexStreamSource.hh  ConstantSource.cc  ConstantSource.cpp  ConstantSource.h  ConstantSource.hh  CsvFileSource.cpp  CsvFileSource.h  FileSourceCreator.h  FileSourceCreator.hh  IstreamSource.cc  IstreamSource.cpp  IstreamSource.h  IstreamSource.hh  LinearSource.h  LinuxGpioSource.cpp  LinuxGpioSource.h  LinuxIOSource.cpp  LinuxIOSource.h  PulseSource.h  RandomSource.cc  RandomSource.cpp  RandomSource.h  RandomSource.hh  RtlsdrSource.cpp  RtlsdrSource.h  SelectiveCsvFileSource.h  ServerSocketSource.cc  ServerSocketSource.cpp  ServerSocketSource.h  ServerSocketSource.hh  SocketSource.cc  SocketSource.cpp  SocketSource.h  (+9 more)
codec/: BitOperation.h  BitOperation.hh  BitReadInfo.h  BitReadInfo.hh  CMakeLists.txt  LsbitToMsbitOperation.cc  LsbitToMsbitOperation.cpp  LsbitToMsbitOperation.h  LsbitToMsbitOperation.hh  Makefile.am  MsbitToLsbitOperation.cc  MsbitToLsbitOperation.cpp  MsbitToLsbitOperation.h  MsbitToLsbitOperation.hh
common/: BlockManager.cpp  BlockManager.h  BlockRunner.cpp  BlockRunner.h  BlockTypes.h  CMakeLists.txt  CallbackTypes.h  ComplexType.cc  ComplexType.cpp  ComplexType.h  ComplexType.hh  CsvParser.cpp  CsvParser.h  CsvStreamParser.cpp  CsvStreamParser.h  DataTypes.cc  DataTypes.cpp  DataTypes.h  DataTypes.hh  GenericCopy.h  GenericCopy.hh  IPort.h  IPort.hh  Lock.cxx  Lock.hxx  Lockable.hxx  Makefile.am  MemInputStream.cpp  MemInputStream.h  MixedPort.cc  MixedPort.cpp  MixedPort.h  MixedPort.hh  MultiPtr.hh  Mutex.cxx  Mutex.hxx  PlPlot.h  PlPlot.hh  Port.cc  Port.cpp  (+21 more)
ext-gmock/: Makefile.am  Makefile.sample  readme
http/: CMakeLists.txt  HttpTcpWebsocketServer.cpp  HttpTcpWebsocketServer.h
plugins/: CMakeLists.txt  Makefile.am  NumpyUtil.cc  NumpyUtil.cpp  NumpyUtil.h  NumpyUtil.hh  PythonPlugin.cc  PythonPlugin.cpp  PythonPlugin.h  PythonPlugin.hh  PythonPluginCommon.h  PythonPluginCommon.hh  PythonPluginExceptions.cc  PythonPluginExceptions.cpp  PythonPluginExceptions.h  PythonPluginExceptions.hh  PythonPluginTest.cc  PythonPluginTest.cpp  PythonResult.h  PythonResult.hh  PythonUtil.cc  PythonUtil.cpp  PythonUtil.h  PythonUtil.hh  SafePythonObject.cc  SafePythonObject.cpp  SafePythonObject.h  SafePythonObject.hh  numpy_test.py  py_function.py  test_file.py
socket/: CMakeLists.txt  EnhancedUdpSocket.cc  EnhancedUdpSocket.cpp  EnhancedUdpSocket.h  EnhancedUdpSocket.hh  IClientSocket.h  IClientSocket.hh  IPSocket.cc  IPSocket.cpp  IPSocket.h  IPSocket.hh  IServerSocket.h  IServerSocket.hh  ISocket.h  ISocket.hh  Makefile.am  RawIPSocket.cc  RawIPSocket.cpp  RawIPSocket.h  RawIPSocket.hh  SctpSocket.cc  SctpSocket.cpp  SctpSocket.h  SctpSocket.hh  SocketUtils.cpp  SocketUtils.h  TcpServerSocket.cc  TcpServerSocket.cpp  TcpServerSocket.h  TcpServerSocket.hh  TcpSocket.cc  TcpSocket.cpp  TcpSocket.h  TcpSocket.hh  UdpLiteSocket.cc  UdpLiteSocket.cpp  UdpLiteSocket.h  UdpLiteSocket.hh  UdpSocket.cc  UdpSocket.cpp  (+4 more)
src/: CMakeLists.txt  Makefile.am  input.rf  main.cc  main.cpp  sample.cc  sample.cpp
test/: CMakeLists.txt  catch.hpp  test_blocks_basicop_duplicator.cpp  test_blocks_basicop_transpose.cpp  test_blocks_converter_charordinalconverter.cpp  test_blocks_filters_delay.cpp  test_blocks_math_arccosh.cpp  test_blocks_math_arcsinh.cpp  test_blocks_math_average.cpp  test_blocks_math_constpow.cpp  test_blocks_math_cos.cpp  test_blocks_math_gain.cpp  test_blocks_math_runningaverage.cpp  test_blocks_math_sin.cpp  test_blocks_math_sum.cpp  test_blocks_math_tan.cpp  test_blocks_sinks_json_data_extractable.cpp  test_blocks_sinks_stdout.cpp  test_blocks_sources_audio.cpp  test_blocks_sources_complex.cpp  test_blocks_sources_constant.cpp  test_blocks_sources_linear.cpp  test_blocks_sources_pulse.cpp  test_blocks_sources_random.cpp  test_blocks_sources_step.cpp  test_blocks_text_splitlineblock.cpp  test_blocks_text_splitwordsblock.cpp  test_blocks_text_textcsvparser.cpp  test_plugins_numpy_basic.cpp  testsuite.cpp
(+61 files in other folders)
