# (c) 2014 Neeraj Sharma <neeraj.sharma@alumni.iitg.ernet.in>
# see LICENSE for license

# The AUTOMAKE_OPTIONS variable is a special variable that indicates certain
# # options for the automake run. The foreign option tells automake that it should
# # not enforce strict conformance with GNU guidelines.
AUTOMAKE_OPTIONS = foreign

SUBDIRS = ext-gmock common blocks src
