# (c) 2016 Neeraj Sharma <neeraj.sharma@alumni.iitg.ernet.in>
# see LICENSE for license
#
LDADD = $(LOCAL_LIBS)
LOCAL_LIBS = \
 libsocketcommon.la \
 ../libcommon.la

noinst_LTLIBRARIES = libsocketcommon.la

libsocketcommon_la_SOURCES = \
 EnhancedUdpSocket.cc \
 TcpSocket.cc \
 UdpLiteSocket.cc \
 UdpSocket.cc
